CENTRIPETAL ORBITAL RACERS CHANGELOG
------------------------------------

Version 0.1i
--------------------------
IN-DEVELOPMENT STAGE

1. Game "shell/skeleton" written
2. Loading screen completed
3. AssetManager completed
4. Fonts and other utilities completed
5. Main Menu Started
6. UI System completed
7. UI elements modified with scaling support and
text support
8. Fixed UI element incorrect positions b/c of
scaling
9. Main Menu almost compelete
(Buttons done except button pressing and first
button staying selected after mouse leaving button)
10. Main Menu is complete (bug mentioned previously is
fixed)
11. Track1 screen has a background, a track, and a player car
(not properly positioned yet)

Version 0.2i - 0.3i
---------------------------
1. Player car proplerly positioned
2. Car movement with rotation and camera follow completed
3. Added Car class (objectified the cars, including playerCar)
4. Added Waypoint class that has a target Car associated with it

Version 0.4a
---------------------------
ALPHA STAGE

1. Cars are 'attached' to a waypoint
2. Waypoint system is very buggy
3. Previous system is scrapped, simpler system implemented
4. Waypoint system mostly completed, except a rotation bug
5. Plasma cannons added to front of player car img
6. Plasma bullets (mostly) align to the cannon no matter the playerCar's
rotation, but when turning sharply and at higher speeds the bullets offset
by a certain distance eventually, for some reason
7. Previous bug fixed (as far as I know)
8. Track collision FINALLY implemented via collision color map
9. Car-to-car collision implemented

Version 0.5a
----------------------------
1. Main menu music and track1 music added
2. Added Polygons to PlasmaBullets
3. Very basic PlasmaBullet collision detection with car polygons completed