@@ -4,21 +4,30 @@ import com.badlogic.gdx.graphics.g2d.Sprite;
 import com.badlogic.gdx.math.Polygon;
 import com.badlogic.gdx.math.Vector2;
 
+import schultz.personal.cor.main.Track1;
+
 public class Car {
 	
 	private Sprite car;
+	private Track1 track1;
 	private float speed;
+	private float hp;
 	private float midXPos; // the X pos of the car, but in the middle of the car
 	private float midYPos;
 	private Polygon boundPoly; // the polygon associated with this car object
+	private boolean isDestroyed;
 	
-	public Car(Sprite car) {
+	public Car(Sprite car, Track1 track1) {
 		this.car = car;
+		this.track1 = track1;
 		
 		speed = 0;
+		hp = 100;
 		
 		midXPos = car.getX() + car.getOriginX();
 		midYPos = car.getY() + car.getOriginY();
+		
+		isDestroyed = false;
 	}
 	
 	public Vector2 getVelocity(float speed, float rotation) {
@@ -45,6 +54,15 @@ public class Car {
 		}
 	}
 	
+	public void checkHP() {
+		if(hp <= 0 && !isDestroyed) {
+			isDestroyed = true;
+			
+			track1.getCars().remove(this);
+			track1.getCarPolys().remove(this.boundPoly);
+		}
+	}
+	
 	public Sprite getSprite() {
 		return car;
 	}
@@ -55,6 +73,14 @@ public class Car {
 	
 	public void setSpeed(float speed) {
 		this.speed = speed;
+	}
+	
+	public float getHP() {
+		return hp;
+	}
+	
+	public void setHP(float hp) {
+		this.hp = hp;
 	}
 	
 	public float getMidXPos() {
@@ -71,5 +97,13 @@ public class Car {
 	
 	public Polygon getBoundPoly() {
 		return boundPoly;
+	}
+	
+	public boolean getIsDestroyed() {
+		return isDestroyed;
+	}
+	
+	public void setIsDestroyed(boolean isDestroyed) {
+		this.isDestroyed = isDestroyed;
 	}
 }
