@@ -105,6 +105,8 @@ public class Loading implements Screen {
 		game.mgr.load("img/car2.png", Texture.class);
 		game.mgr.load("img/plasma_bullet.png", Texture.class);
 		game.mgr.load("img/collision.png", Texture.class);
+		game.mgr.load("img/car1_hit.png", Texture.class);
+		game.mgr.load("img/car2_hit.png", Texture.class);
 		game.mgr.load("audio/Rhinoceros.mp3", Music.class);
 		game.mgr.load("audio/Unwritten_Return.mp3", Music.class);
 	}
