@@ -51,3 +51,4 @@ Version 0.5a
 1. Main menu music and track1 music added
 2. Added Polygons to PlasmaBullets
 3. Very basic PlasmaBullet collision detection with car polygons completed
+4. AICars are "destroyed" when their HP is 0 due to PlasmaBullets
